--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,19 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.active {
+  font-size: 17px;
+}
+
+.active2 {
+  font-size: 17px;
+}
+
+.navbar-brand {
+  font-size: 50px;
+}
+
+.GA {
+  color: red;
+  font-weight: bold;
+}
