styling work on posts

--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://viewfinders.io/wp-content/uploads/DSC_92391.jpg");
+  background-color: rgb(211,211,211);
   background-position: center;
   background-size: auto;
 }
