--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,22 +83,28 @@ h2 {
   }
 
   .profilePic {
-    float: left
+    float: left;
+    margin: 0 0 0 25px;
   }
 
   .leftAdj {
-    float: left
+    margin: 0 0 0 25px;
+    float: left;
   }
 
   .post {
-    background-color: white;
+    background-color: rgb(211,211,211);
     text-align: left;
+  }
+
+  .mainPost {
+    border-bottom: 2px solid rgb(34,34,34);
   }
 
   .posts {
     font-size: 20px;
     background-color: white;
-      border: 2px solid red;
+      border: 2px solid rgb(34, 34, 34);
       border-radius: 5px;
       padding: 5px 0px 100px 10px;
       margin: 25px;
@@ -118,7 +124,7 @@ h2 {
   }
 
   .viewPost {
-    margin: 10px 0 0 0;
+    margin: 10px 0 0 25px;
   }
 
   .userLink {
@@ -126,5 +132,6 @@ h2 {
   }
 
   .btn {
+    margin: 0 25px 0 0;
     float: right;
   }
