fixed login page styling

--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -3,3 +3,12 @@ body {
   background-position: center;
   background-size: auto;
 }
+
+.GAlogin {
+  font-size: 50px;
+}
+
+.mblr {
+  font-size: 50px;
+  color: rgb(157, 157, 157)
+}
